# lelamp

./: .env.example  .gitignore  LeLamp_Nova_Presentation.html  PROJECT_SUMMARY.md  README.md  UPLOADING_GUIDE.md  WIRING_GUIDE.md  debug_mp.py  debug_mp_install.py  deepgram_agent.py  diagnose_pi.py  fix_vision_pi.py  fix_vision_pi.sh  home_motors.py  install_vision_pi.sh  kokoro_tts.py  list_audio_devices.py  main.py  mane1.code-workspace  mimo_llm.py  motor_offsets.json  pyproject.toml  requirements.txt  save_home_position.py  setup_ml_env.sh  setup_pi.sh  setup_vision_env.sh  setup_vision_explicit.sh  smooth_animation.py  start.sh  sync_to_pi.sh  test_animations.py  test_api.py  test_arduino_leds.py  test_audio.py  test_hand_detection.py  test_led_gpio.py  test_leds.py  test_mic.py  test_motors_direct.py  (+7 more)
arduino/main/: main.ino
arduino_led_matrix/: arduino_led_matrix.ino
examples/arduino_bridge/: ARDUINO_SETUP.md  TROUBLESHOOTING.md  arduino_bridge.ino  pi_controller.py  simple_test.ino
lelamp/service/alarm/: alarm_service.py
lelamp/service/motors/: __init__.py  direct_motors_service.py
lelamp/service/rgb/: led_faces.py  rgb_service.py
lelamp/service/vision/: __init__.py  simple_vision_service.py  vision_service.py
static/: app.js  index.html  style.css
