[project]
name = "lelamp-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=5.0.0",
    "edge-tts>=7.2.7",
    "feetech-servo-sdk>=1.0.0",
    "firebase-admin>=6.0.0",
    "numpy>=2.2.6",
    "pvporcupine>=3.0.5",
    "pvrecorder>=1.2.7",
    "pyarrow==20.0.0",
    "pyaudio>=0.2.14",
    "pyserial>=3.5",
    "python-dotenv",
    "requests>=2.31.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "opencv-python-headless",
    "protobuf",
]

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-neopixel",
    "rpi-ws281x",
]
# Note: For Raspberry Pi ARM, install mediapipe-rpi4==0.8.8 manually:
# pip install mediapipe-rpi4==0.8.8
# For other platforms, use: pip install mediapipe==0.10.14
